--- a/ui.css
+++ b/ui.css
@@ -8,7 +8,7 @@
 .inter-text {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
-  font-weight: 400; /* or any value from 100 to 900 */
+  font-weight: 400; 
   font-style: normal;
 }
 * {
@@ -17,6 +17,9 @@
 /* shared styles */
 .color{
     color: #4E47FF;
+}
+.btn-primary:hover{
+  background-color: #198ef5cb;
 }
 .btn-primary {
   background-color: #4E47FF;
@@ -28,14 +31,16 @@
   margin-top: 10px;
   border-radius: 10px;
   padding: 12px 36px;
+  cursor: pointer;
 }
 
 /* HEADER STYLE */
 .header{
   background-image: url('./Assets/Hero-bg.png');
-  /* max-width: 1440px; */
+  width: 100%;
   height: 698px;
-  /* margin-top: 0px; */
+  margin-bottom:116px;
+  
 }
 /* nav style section */
 
@@ -66,10 +71,53 @@ nav ul li a {
     width: 905px;
     margin: 0 auto;
     text-align: center;
-    gap: 37px;
+    gap: 37px; 
 }
+ /* .banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 905px;
+  margin: 0 auto;
+  text-align: center;
+  gap: 37px;
+} */
 .banner-title{
   font-weight: bold;
   font-size: 65px;
   color: #252432;
+}
+
+/* main*/
+main{
+  gap: 116px;
+}
+
+/* Action section Style */
+
+.action-container{
+  display: flex;
+  justify-content: center;
+  width: 1140px;
+  margin: 0 auto;
+}
+.left-action {
+  display: block;
+  gap: 23px;
+  justify-content: space-between;
+  width: 517px;
+}
+.action-title{
+  font-weight: bold;
+  font-size: 42px;
+  color: #252432;
+}
+.action-para{
+  font-size: 24px;
+  background-image: linear-gradient(#252432, #CCCCCC);
+  color: transparent;
+  background-clip: text;
+}
+.action-img{
+  border-radius: 48px;
 }
