--- a/ui.css
+++ b/ui.css
@@ -315,3 +315,49 @@ textarea.form-text {
     resize: none;
     outline: none;
 }
+/* footer style */
+footer{
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.footer-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 100px auto;
+  width: 531px;
+  gap: 20px;
+}
+footer .logo{
+  color: #4E47FF;
+  font-size: 100px;
+  font-weight: 1000;
+  margin: 0 auto;
+}
+.company-description{
+  color: #8987A1;
+  margin: 0 auto;
+  text-align: center;
+}
+footer ul{
+  margin: 10px;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  gap: 48px;
+}
+footer ul li{
+  display: flex;
+  
+  color: #8987A1;
+  list-style: none;
+  margin: 0
+}
+footer a{
+  text-decoration: none;
+  color: #8987A1;
+}
+
